--- a/Trening/app/src/main/res/layout/activity_main.xml
+++ b/Trening/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,73 +9,119 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.primer.trening.MainActivity">
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New CheckBox"
-        android:id="@+id/checkBox"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/button"
-        android:layout_alignEnd="@+id/button" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
-        android:layout_below="@+id/checkBox"
-        android:layout_centerHorizontal="true" />
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/relativeLayout">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:src="@drawable/pie"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:id="@+id/imageView1"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <TextView
+        <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Medium Text"
-            android:id="@+id/textView"
-            android:layout_below="@+id/imageView1"
-            android:layout_alignParentLeft="true"/>
+            android:text="New CheckBox"
+            android:id="@+id/checkBox"
+            android:layout_alignParentTop="true"
+            android:layout_alignRight="@+id/button"
+            android:layout_alignEnd="@+id/button" />
 
-        <ImageView
-            android:src="@drawable/pie"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:id="@+id/imageView2"
-            android:layout_alignTop="@+id/imageView1"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true" />
-
-        <TextView
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Medium Text"
-            android:id="@+id/textView2"
-            android:layout_below="@+id/imageView2"
-            android:layout_alignParentRight="true" />
+            android:text="New Button"
+            android:id="@+id/button"
+            android:layout_below="@+id/checkBox"
+            android:layout_centerHorizontal="true" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/button"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/relativeLayout">
+
+            <ImageView
+                android:src="@drawable/pie"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:id="@+id/imageView1"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Steps:"
+                android:id="@+id/steps1"
+                android:layout_below="@+id/imageView1"
+                android:layout_alignParentLeft="true"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="give me string"
+                android:id="@+id/daily_goal"
+                android:layout_below="@+id/steps1"
+                android:layout_alignParentLeft="true"/>
+
+            <ImageView
+                android:src="@drawable/pie"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:id="@+id/imageView2"
+                android:layout_alignTop="@+id/imageView1"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Steps:"
+                android:id="@+id/steps2"
+                android:layout_below="@+id/imageView2"
+                android:layout_alignParentRight="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="string reference here"
+                android:id="@+id/activity_contest"
+                android:layout_below="@+id/steps2"
+                android:layout_alignParentRight="true" />
+
+        </RelativeLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/button2"
+            android:layout_below="@+id/relativeLayout"
+            android:layout_centerHorizontal="true" />
+
+        <SlidingDrawer
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:content="@+id/linearLayout"
+            android:handle="@+id/button4"
+            android:id="@+id/slidingDrawer"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true">
+
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"></LinearLayout>
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Handle" />
+        </SlidingDrawer>
 
     </RelativeLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button2"
-        android:layout_below="@+id/relativeLayout"
-        android:layout_centerHorizontal="true" />
-
-</RelativeLayout>
+</FrameLayout>
