--- a/Trening/app/src/main/res/values/colors.xml
+++ b/Trening/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#22b14c</color>
+    <color name="colorPrimaryDark">#1e9842</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
