--- a/Trening/app/src/main/res/layout/activity_main.xml
+++ b/Trening/app/src/main/res/layout/activity_main.xml
@@ -20,21 +20,28 @@
             android:text="New CheckBox"
             android:id="@+id/checkBox"
             android:layout_alignParentTop="true"
-            android:layout_alignRight="@+id/button"
-            android:layout_alignEnd="@+id/button" />
+            android:layout_centerHorizontal="true"/>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Button"
-            android:id="@+id/button"
+        <ImageButton
+            android:id="@+id/contest_button"
+            style="?android:textAppearanceSmall"
+            android:layout_width="350dp"
+            android:layout_height="100dp"
+            android:text="SIGN IN"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"
+            android:clickable="true"
+            android:textSize="24dp"
+            android:src="@drawable/contest_button"
+            android:scaleType="fitCenter"
+            android:background="#00ffffff"
             android:layout_below="@+id/checkBox"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/button"
+            android:layout_below="@+id/contest_button"
             android:layout_centerHorizontal="true"
             android:id="@+id/relativeLayout">
 
@@ -93,14 +100,21 @@
 
         </RelativeLayout>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Button"
+        <ImageButton
             android:id="@+id/button2"
+            style="?android:textAppearanceSmall"
+            android:layout_width="350dp"
+            android:layout_height="100dp"
+            android:text="SIGN IN"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"
+            android:clickable="true"
+            android:textSize="24dp"
+            android:src="@drawable/contest_button"
+            android:scaleType="fitCenter"
+            android:background="#00ffffff"
             android:layout_below="@+id/relativeLayout"
             android:layout_centerHorizontal="true" />
-
     </RelativeLayout>
 
     <FrameLayout
