--- a/Trening/app/src/main/res/layout/activity_login.xml
+++ b/Trening/app/src/main/res/layout/activity_login.xml
@@ -74,7 +74,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/password"
-                android:layout_marginTop="50dp" />
+                android:layout_marginTop="50dp"
+                android:onClick="toMain"/>
 
         </RelativeLayout>
     </ScrollView>
